--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -9,7 +9,8 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-
+  TARGET: FightClubGame
+  
 jobs:
   build:
     runs-on: windows-latest
@@ -21,6 +22,9 @@ jobs:
       run: cmake -B ${{github.workspace}}/build
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target ${{env.TARGET}}
+
+    - name: Archive
+      run: Compress-Archive -Path /build/bin/* -DestinationPath ${{env.TARGET}}-${{env.BUILD_TYPE}.zip
 
 
