--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -25,6 +25,6 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target ${{env.TARGET}}
 
     - name: Archive
-      run: Compress-Archive -Path /build/bin/* -DestinationPath ${{env.TARGET}}-${{env.BUILD_TYPE}.zip
+      run: Compress-Archive -Path build/bin/* -DestinationPath ${{env.TARGET}}-${{env.BUILD_TYPE}}.zip
 
 
