--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -27,4 +27,10 @@ jobs:
     - name: Archive
       run: Compress-Archive -Path build/bin/* -DestinationPath ${{env.TARGET}}-${{env.BUILD_TYPE}}.zip
 
+    - name: Upload artivacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{env.TARGET}}-${{env.BUILD_TYPE}}
+        path: ${{env.TARGET}}-${{env.BUILD_TYPE}}.zip
+
 
