--- a/.github/workflows/Linux-build.yml
+++ b/.github/workflows/Linux-build.yml
@@ -22,5 +22,14 @@ jobs:
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target ${{env.TARGET}}
+   
+   
+    - name: Archive
+      run: zip -r ${{env.TARGET}}-${{env.BUILD_TYPE}}.zip build/bin
 
+    - name: Upload artivacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{env.TARGET}}-${{env.BUILD_TYPE}}
+        path: ${{env.TARGET}}-${{env.BUILD_TYPE}}.zip
 
